# udp-fanout

./: Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: clippy.yml  publish.yml
pkg/: config.toml
pkg/debian/: service
src/: main.rs
